--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
         - DEV="--no-dev"
     - php: '7.4'
       env:
-        - SNIFF=1 TESTS=1 JEST=1 COVERAGE=1
+        - SNIFF=1 TESTS=1 COVERAGE=1
 
 cache:
   directories:
@@ -32,13 +32,11 @@ cache:
 before_script:
   - phpenv rehash
   - composer install $DEV
-  - if [[ "$JEST" == "1" || "$COVERAGE" == "1" ]]; then cd src; yarn install --ignore-engines; cd ..; fi
+  - if [[ "$COVERAGE" == "1" ]]; then cd src; yarn install --ignore-engines; cd ..; fi
 
 script:
   - if [[ "$SNIFF" == "1" ]]; then vendor/bin/phpcs --colors; fi
   - if [[ "$TESTS" == "1" ]]; then make update-phpunit; fi
   - if [[ "$TESTS" == "1" && "$COVERAGE" != "1" ]]; then vendor/phpunit/phpunit/phpunit --configuration tests/phpunit/phpunit.xml; fi
-  - if [[ "$JEST" == "1" ]]; then cd src; yarn run test; cd ..; fi
   - if [[ "$COVERAGE" == "1" ]]; then vendor/phpunit/phpunit/phpunit --configuration tests/phpunit/phpunit.xml --coverage-clover coverage.xml; fi
   - if [[ "$COVERAGE" == "1" ]]; then php vendor/php-coveralls/php-coveralls/bin/php-coveralls -v; fi
-  - if [[ "$COVERAGE" == "1" ]]; then cd src; yarn run coveralls; cd ..; fi
