--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
   - composer install $DEV
 
 script:
-  - if [[ "$SNIFF" == "1" ]]; then vendor/bin/phpcs --colors; fi
+  - if [[ "$SNIFF" == "1" ]]; then vendor/bin/phpcs --colors --standard=phpcs.xml .; fi
   - if [[ "$TESTS" == "1" && "$COVERAGE" != "1" ]]; then vendor/phpunit/phpunit/phpunit --configuration tests/phpunit/phpunit.xml; fi
   - if [[ "$COVERAGE" == "1" ]]; then vendor/phpunit/phpunit/phpunit --configuration tests/phpunit/phpunit.xml --coverage-clover coverage.xml; fi
   - if [[ "$COVERAGE" == "1" ]]; then php vendor/php-coveralls/php-coveralls/bin/php-coveralls -v; fi
