--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require-dev": {
     "wp-coding-standards/wpcs": "dev-master",
     "10up/wp_mock": "^0.4.2",
-    "php-coveralls/php-coveralls": "^2.2"
+    "php-coveralls/php-coveralls": "^2.2",
+    "lucatume/function-mocker": "^1.3"
   },
   "autoload": {
     "classmap": [
