--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,24 @@ notifications:
 matrix:
   fast_finish: true
   include:
+    - php: '7.0'
+      env:
+        - DEV="--no-dev"
+    - php: '7.0'
+      env:
+        - TESTS=1
+    - php: '7.1'
+      env:
+        - DEV="--no-dev"
+    - php: '7.1'
+      env:
+        - TESTS=1
+    - php: '7.2'
+      env:
+        - DEV="--no-dev"
+    - php: '7.2'
+      env:
+        - TESTS=1
     - php: '7.3'
       env:
         - DEV="--no-dev"
