--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "phpcompatibility/php-compatibility": "^9.0",
     "phpcompatibility/phpcompatibility-wp": "^2.1.0",
     "php-coveralls/php-coveralls": "^2.2",
-    "lucatume/function-mocker": "^1.3"
+    "lucatume/function-mocker": "^1.3",
+    "brain/monkey": "2.*"
   },
   "autoload": {
     "classmap": [
