--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,11 @@
   "require-dev": {
     "composer/composer": "~1.9",
     "wp-coding-standards/wpcs": "dev-master",
-    "10up/wp_mock": "^0.3.0",
     "phpcompatibility/php-compatibility": "^9.0",
     "phpcompatibility/phpcompatibility-wp": "^2.1.0",
     "php-coveralls/php-coveralls": "^2.2",
     "lucatume/function-mocker": "^1.3",
-    "brain/monkey": "2.*"
+    "brain/monkey": "^2.4"
   },
   "autoload": {
     "classmap": [
