--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-.idea
+/assets/js/**
+/node_modules/
+/tests/**/*.cache
+/vendor/
+
+!composer.lock
+!yarn.lock
+*.lock
+*.sql
+*.tar.gz
+*.zip
 .DS_Store
-coverage
-vendor
+.idea/
+.phpunit.result.cache
+Thumbs.db
+wp-cli.local.yml
