--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	},
 	"devDependencies": {
 		"@wordpress/eslint-plugin": "^6.1.0",
-		"autoprefixer": "^9.8.0",
+		"autoprefixer": "^9.8.2",
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.26.3",
 		"babel-jest": "^26.0.1",
@@ -52,6 +52,7 @@
 		"coveralls": "^3.1.0",
 		"eslint": "^6.7.2",
 		"eslint-config-standard": "~14.1.0",
+		"eslint-config-wordpress": "^2.0.0",
 		"eslint-plugin-import": "~2.19.1",
 		"eslint-plugin-node": "~10.0.0",
 		"eslint-plugin-promise": "~4.2.1",
